Some small changes to the Genome class
* made several fields final
* re-ordered fields and moved some declarations up from the bottom
* replaced the existing nullGenome() method with a statically
  initialized singleton NULL_GENOME which. This should fix what looksl
ike a minor bug in IGVCommandBar where null genome was unintentionally
null.
* a few uses of getFirst/getLast/getOrDefault where I thought it
  improved clarity